--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html"><img src="logo.png" height="60" width="100" >
+          <a class="navbar-brand" href="index.html">
 
             <span>
-            🌲
+            NJB CARTS
             </span>
           </a>
 
