--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a class="navbar-brand" href="index.html">
 
             <span>
-            NJB CARTS
+            NJB CARTS🛒
             </span>
           </a>
 
