--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
+            <img src="logo.png" height="70" width="100">
 
             <span>
-            NJB CARTS🛒
+             🛒
             </span>
           </a>
 
@@ -96,7 +97,7 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="slider_bg_box">
-        <img src="images/slider-bg.jpg" alt="">
+        <img src="https://img.freepik.com/premium-photo/online-shopping-concept-3d-rendering_651547-364.jpg" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
