--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="slider_bg_box">
-        <img src="https://img.freepik.com/premium-photo/online-shopping-concept-3d-rendering_651547-364.jpg" alt="">
+        <img src="https://img.freepik.com/premium-photo/online-shopping-concept-3d-rendering_651547-364.jpg" width="100%" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
